--- a/frontend/src/app/dashboard/dashboard/dashboard.page.scss
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.scss
@@ -106,8 +106,32 @@ ion-row {
   padding-right:10px;
 }
 
+.chip{
+  margin-left:-9px;
+  width:120%;
+}
+
 ion-chip {
   height: 50px;
   width: 50px;
   border-radius:10px;
+}
+
+ion-label {
+  font-size:9px;
+  font-weight:800;
+  //text-align:center;
+ //display: flex;
+  justify-content: center;
+  width: 200%;
+}
+
+ion-icon {
+  //padding-left:0px;
+  padding-right:8px;
+  
+}
+
+ion-col {
+ 
 }
