--- a/frontend/src/app/user-dashboard/user-dashboard/user-dashboard.page.html
+++ b/frontend/src/app/user-dashboard/user-dashboard/user-dashboard.page.html
@@ -27,12 +27,13 @@
             <!-- <img src="../../assets/icon/profile_icon.svg" alt=""> -->
             <ion-label>Profile</ion-label>
           </ion-tab-button>
-      
+        <!---
           <ion-tab-button  (click)="openMenu()">
             <ion-icon name="grid-outline"></ion-icon>
-            <!-- <img src="../../assets/icon/more_icon.svg" alt=""> -->
+             <img src="../../assets/icon/more_icon.svg" alt=""> 
             <ion-label>More</ion-label>
           </ion-tab-button>
+        -->
         </ion-tab-bar>
     </ion-tabs>
 </ion-content>
