--- a/frontend/src/app/mobile-airtime/mobile-airtime/mobile-airtime.page.html
+++ b/frontend/src/app/mobile-airtime/mobile-airtime/mobile-airtime.page.html
@@ -1,3 +1,4 @@
+<!--
 <ion-header class="header-bg">
   <ion-toolbar mode="ios" color="none" class="text-white">
     <ion-buttons mode="ios">
@@ -11,7 +12,13 @@
     <ion-title >Mobile Airtime</ion-title>
   </ion-toolbar>
 </ion-header>
-
+-->
+<ion-toolbar mode="ios">
+    <ion-buttons mode="ios"  slot="start">
+      <ion-icon class="icon back-arrow"[routerLink]="['/walk-through']" name="arrow-back-sharp"></ion-icon>
+    </ion-buttons>
+    <ion-title>Mobile Airtime</ion-title>
+  </ion-toolbar>
 
 <ion-content>
   <div class="container">
