--- a/frontend/src/assets/css/main.scss
+++ b/frontend/src/assets/css/main.scss
@@ -756,6 +756,13 @@ ion-buttons {
 	color: #fff;
   }
 
+  .back-arrow {
+  padding-top:35px;
+  text-align: left !important;
+  margin-left: 10px !important;
+  color: #424242;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 }
 
