--- a/frontend/src/app/wallet/wallet.page.html
+++ b/frontend/src/app/wallet/wallet.page.html
@@ -32,7 +32,7 @@
     <ion-card color="primary" mode="ios">  
       <ion-card-content >
          <p class="text">Available Balance</p>
-        <div class="amount">N 5000.00</div>
+        <div class="amount">&#x20A6; {{userData.wallet_amount}}</div>
       </ion-card-content>
     </ion-card>
   </div>
