--- a/frontend/src/app/dashboard/dashboard/dashboard.page.scss
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.scss
@@ -132,6 +132,16 @@ ion-icon {
   
 }
 
-ion-col {
- 
+.ion-fab-button{
+  height: 35px;
+  width:35px;
+  margin-top:-80px;
+  margin-left:-10px;
+}
+
+.wallet {
+  justify:center;
+}
+.list{
+  margin-top:-14px;
 }
