--- a/frontend/src/app/profile/profile/profile.page.scss
+++ b/frontend/src/app/profile/profile/profile.page.scss
@@ -1,4 +1,5 @@
 .details {
+ 
   padding-right: 0 !important;
 
   h5 {
@@ -39,4 +40,50 @@ ion-input {
 
 button {
   margin: 0 auto !important;
+}
+
+.back-arrow {
+  padding-top:9px;
+  text-align: left !important;
+  margin-left: -5px !important;
+  color: #424242;
+}
+
+.title {
+  font-weight: 600;
+  font-size:10px;
+}
+
+ion-list {
+  margin-left:-50px;
+  //height: 1px;
+  
+}
+ion-item {
+  height: 7vh;
+}
+
+ion-icon {
+  height: 2.5vh;
+  margin-right: -5px;
+  color:#9ACD32;
+}
+
+ion-note {
+  font-size:8px;
+  font-weight: 100;
+  margin-right: 0vh;
+}
+ion-datetime{
+  font-size:8px;
+  font-weight: 100;
+  margin-right: 0vh;
+}
+
+.avatar {
+  height:10vh;
+  width:10vh;
+}
+ion-title {
+  font-size:0.5vh;
 }
