--- a/frontend/src/app/security/security/security.page.html
+++ b/frontend/src/app/security/security/security.page.html
@@ -1,15 +1,10 @@
-<ion-header>
-  <ion-toolbar mode="ios">
-    <ion-buttons mode="ios">
-      <ion-button>
-      </ion-button>
-      <ion-button></ion-button>
+<!-- security html-->
+<ion-toolbar mode="ios">
+    <ion-buttons mode="ios"  slot="start">
+      <ion-icon class="icon back-arrow"[routerLink]="['/walk-through']" name="arrow-back-sharp"></ion-icon>
     </ion-buttons>
-    <ion-title >Profile</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-
+    <ion-title>Profile</ion-title>
+</ion-toolbar>
 <ion-content>
   <div class="container">
     <ion-segment (ionChange)="segmentChanged($event)" value="security" mode="ios">
