--- a/frontend/src/assets/css/main.scss
+++ b/frontend/src/assets/css/main.scss
@@ -755,7 +755,9 @@ ion-buttons {
   
 	color: #fff;
   }
-
+  ion-refresher {
+	margin-top:300px;
+  }
   /*.back-arrow {
   padding-top:35px;
   text-align: left !important;
