--- a/frontend/src/app/user-dashboard/user-dashboard/user-dashboard.page.html
+++ b/frontend/src/app/user-dashboard/user-dashboard/user-dashboard.page.html
@@ -23,9 +23,9 @@
             <!-- <img src="../../assets/icon/profile_icon.svg" alt=""> -->
             <ion-label>Profile</ion-label>
           </ion-tab-button>
-          <ion-tab-button  (click)="openMenu()">
-            <ion-icon size = "small" name="log-out"></ion-icon>
-            <ion-label>Logout</ion-label>
+          <ion-tab-button  (click)="openMoreMenu()">
+            <ion-icon size = "small" name="ellipsis-horizontal-circle-outline"></ion-icon>
+            <ion-label>More</ion-label>
           </ion-tab-button>
         </ion-tab-bar>
     </ion-tabs>
