--- a/frontend/src/app/login/forgotpassword/forgotpassword.page.html
+++ b/frontend/src/app/login/forgotpassword/forgotpassword.page.html
@@ -1,9 +1,29 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>forgotpassword</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar mode="ios">
+  <ion-buttons mode="ios"  slot="start">
+    <ion-icon class="icon back-arrow"[routerLink]="['/login']" name="arrow-back-sharp"></ion-icon>
+  </ion-buttons>
+  <ion-title>Forgot Password</ion-title>
+</ion-toolbar>
 
 <ion-content>
-
+  <div class="signup">
+    <form [formGroup]="forgotPasswordForm" (ngSubmit)="sendToMail()">
+ 
+      <ion-item>
+        <ion-icon style="margin-left:0px;" name="call-outline"></ion-icon>&nbsp;&nbsp;
+        <ion-item lines="full">
+          <ion-label position="floating">Email</ion-label>
+          <ion-input formControlName="email" type="email"></ion-input>
+        </ion-item>
+        <span class="error ion-padding" *ngIf="submitted && forgotPasswordCtrl.email.errors?.pattern">
+          Enter valid email.
+        </span>
+      </ion-item>
+    
+      <button type="submit" ion-button mode="ios">
+        Submit
+      </button> 
+      
+    </form> 
+   </div>
 </ion-content>
