Incomplete Airtime Recharge, remaining Data recharge and native access of contacts

--- a/frontend/src/app/add-money/add-money/add-money.page.html
+++ b/frontend/src/app/add-money/add-money/add-money.page.html
@@ -36,9 +36,9 @@
         <ion-input placeholder="Amount" type="text" [(ngModel)] = "fund_amount" required></ion-input>
       </ion-item>
   
-      <ion-item lines="none">
+      <!--ion-item lines="none">
         <ion-input placeholder="Password" type="pasword" required></ion-input>
-      </ion-item>  
+      </ion-item-->  
   
       <div class="ion-text-center">      
         <!--ion-button color="primary" (click)="addMoney()" mode='ios'>
