--- a/frontend/src/app/mobile-airtime/mobile-airtime/mobile-airtime.page.html
+++ b/frontend/src/app/mobile-airtime/mobile-airtime/mobile-airtime.page.html
@@ -1,54 +1,188 @@
-<!--
 <ion-header class="header-bg">
   <ion-toolbar mode="ios" color="none" class="text-white">
     <ion-buttons mode="ios">
       <ion-button (click)="goBack()" slot="start">
         <ion-icon ios="arrow-back-outline" md="arrow-back"></ion-icon>
       </ion-button>
-      <ion-button slot="end">
-        <ion-icon name="alert-circle-outline"></ion-icon>
-      </ion-button>
     </ion-buttons>
-    <ion-title >Mobile Airtime</ion-title>
+    <ion-title >Airtime & Data</ion-title>
   </ion-toolbar>
 </ion-header>
--->
-<ion-toolbar mode="ios">
-    <ion-buttons mode="ios"  slot="start">
-      <ion-icon class="icon back-arrow"[routerLink]="['/walk-through']" name="arrow-back-sharp"></ion-icon>
-    </ion-buttons>
-    <ion-title>Mobile Airtime</ion-title>
-  </ion-toolbar>
 
 <ion-content>
-  <div class="container">
-    <div class="brand">
-      <img src="../../assets/imgs/logo.png" alt="adikpopay-logo" />
-    </div>
-    <div>
-      <ion-item lines="none">
-        <ion-label *ngIf="!isSelected">Select a Network</ion-label>
-        <ion-select okText="Okay" cancelText="Dismiss" required (ionChange)="onChnage()">
-          <ion-select-option value="GLO">GLO</ion-select-option>
-          <ion-select-option value="MTN">MTN</ion-select-option>
-          <ion-select-option value="9MOBILE">9MOBILE</ion-select-option>
-          <ion-select-option value="AIRTEL">AIRTEL</ion-select-option>
-        </ion-select>
-      </ion-item>
-      
-      <ion-item lines="none">
-        <ion-input placeholder="Mobile Number" type="tel" required></ion-input>
-      </ion-item>
+    <div class="main-container">
+      <ion-grid class="--ion-grid-padding">
+        <!--Phone number row-->
+        <ion-row style="margin-top: 10px;">
+          <ion-col style="padding: 10px;">
+            <h6 style="color: #9e9e9e; font-size: 14px">Mobile number</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row style="margin-top: 2px;">
+          <ion-col size="10" style="padding: 5px;">
+            <div style="background-color: #f5f5f5; height: 100%; border-radius: 7px;">
+              <ion-row>
+                <ion-col size="3" class="ion-align-self-center" style="padding: 20px;"><span style="font-size: 12px; font-weight: bold;">+234</span></ion-col>
+                <ion-col size="7" class="ion-align-self-center" style="padding: 20px;"><span style="font-size: 12px; font-weight: bold;">{{phoneNumber}}</span></ion-col>
+                <ion-col size="2" class="ion-align-self-center"><img src="../../assets/icon/down-arrow.png" alt="adikpopay-logo" /></ion-col>
+              </ion-row>
+            </div>
+          </ion-col>
+          <ion-col size="2"style="padding: 5px;">
+            <div style="text-align: center; background-color: #f5f5f5; height: 100%; border-radius: 7px; padding-top: 10px;">
+              <img src="../../assets/icon/profile-user.png"/>
+            </div>
+          </ion-col>
+        </ion-row>
+        <!--Phone number row-->
 
-      <ion-item lines="none">
-        <ion-input placeholder="Amount" type="number" required></ion-input>
-      </ion-item>
+        <!--Network icons row-->
+        <ion-row style="margin-top: 30px;">
+          <ion-col>
+            <h6 style="color: #9e9e9e; font-size: 14px">Select network provider</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row style="margin-top: 20px;">
+          <ion-col size="3" *ngFor="let network of networks; let i=index;">
+            <div [class]="network.divClass" (click)="pickNetwork(i)">
+              <img *ngIf="network.picked" src="../../assets/icon/check.png" [class]="network.imgClass"/>
+            </div>
+          </ion-col>
+        </ion-row>
+        <!--Network icons row-->
 
+        <!--Airtime and Data amount-->
+        <ion-row style="margin-top: 20px;">
+          <ion-col size="6">
+            <ion-segment (ionChange)="segmentChanged($event)" [(ngModel)]="selectedSegment">
+              <ion-segment-button value="airtime">
+                <ion-label style="color: #9e9e9e; font-size: 12px">Airtime</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="data">
+                <ion-label style="color: #9e9e9e; font-size: 12px">Data</ion-label>
+              </ion-segment-button>
+            </ion-segment>
+          </ion-col>
+        </ion-row>
+
+        <ion-row style="margin-top: 10px;">
+          <ion-col>
+            <ion-slides #slide (ionSlideDidChange) = "changeSlide($event)">
+              <ion-slide>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col *ngFor="let amount of networks[selectedNetworkIndex].availableAmounts" size="4" style="padding: 7px;">
+                      <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios" (click)="buyAirtime(amount)">
+                        <ion-card-content style="padding-top: 15px; padding-bottom: 15px;">
+                          <p style="color: #000000; font-size: 20px; font-weight: bold;">{{amount.price}}</p>
+                          <p style="margin-top: 12px;">
+                            <ion-icon name="trophy" class="trophy" style="color: gold"></ion-icon>
+                            <span class="trophy" style="color: gold"> +{{amount.reward}}</span>
+                          </p>
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+
+                  <ion-row>
+                    <ion-col size="12" style="padding: 7px;">
+                      <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios">
+                        <ion-card-content style="padding-top: 3px; padding-bottom: 3px;">
+                          <ion-grid>
+                            <ion-row>
+                              <ion-col ion-text-center size="6">
+                                  <ion-input placeholder="Enter amount" type="text" [(ngModel)]="purchaseParams.amount" style="font-size: 14px;"></ion-input>
+                              </ion-col>
+                              <ion-col ion-text-center size="6">
+                                <ion-button (click)="buyAirtimeEnterAmount()" shape="round" mode="ios" strong="true" size="default" color="primary" style="font-size: 14px;">Pay &#8358; {{purchaseParams.amount}}</ion-button>
+                              </ion-col>
+                            </ion-row>
+                          </ion-grid>
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-slide>
+              <ion-slide>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col *ngFor="let amount of networks[selectedNetworkIndex].availableAmounts" size="4" style="padding: 7px;">
+                      <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios" (click)="buyData(amount)">
+                        <ion-card-content style="padding-top: 15px; padding-bottom: 15px;">
+                          <p style="color: #000000; font-size: 20px; font-weight: bold;">{{amount.price}}</p>
+                          <p style="margin-top: 12px;">
+                            <ion-icon name="trophy" class="trophy" style="color: gold"></ion-icon>
+                            <span class="trophy" style="color: gold"> +{{amount.reward}}</span>
+                          </p>
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+
+                  <ion-row>
+                    <ion-col size="12" style="padding: 7px;">
+                      <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios">
+                        <ion-card-content style="padding-top: 3px; padding-bottom: 3px;">
+                          <ion-grid>
+                            <ion-row>
+                              <ion-col ion-text-center size="6">
+                                  <ion-input placeholder="Enter amount" type="text" [(ngModel)]="purchaseParams.amount" style="font-size: 14px;"></ion-input>
+                              </ion-col>
+                              <ion-col ion-text-center size="6">
+                                <ion-button (click)="buyDataEnterAmount()" shape="round" mode="ios" strong="true" size="default" color="primary" style="font-size: 14px;">Pay &#8358; {{purchaseParams.amount}}</ion-button>
+                              </ion-col>
+                            </ion-row>
+                          </ion-grid>
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-slide>
+            </ion-slides>
+          </ion-col>
+        </ion-row>
+        <!--Airtime and Data amount-->
+
+        <!--Check Balance and more-->
+        <ion-row style="margin-top: 30px;">
+          <ion-col size="12" class="sectionHead">
+            <div style="color: #9e9e9e; font-size: 14px">Check phone balance and more</div>
+          </ion-col>
+        </ion-row>
+        
+        <ion-row style="margin-top: 20px;">
+          <ion-col size="3" style="padding: 3px;">
+            <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios">
+              <ion-card-content>
+                <h6 style="font-size: 10px;">Airtel</h6>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+          <ion-col size="3" style="padding: 3px;">
+            <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios">
+              <ion-card-content>
+                <h6 style="font-size: 10px;">MTN</h6>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+          <ion-col size="3" style="padding: 3px;">
+            <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios">
+              <ion-card-content>
+                <h6 style="font-size: 10px;">GLO</h6>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+          <ion-col size="3" style="padding: 3px;">
+            <ion-card style="border-radius: 10px; box-shadow: none;" button="true" mode="ios">
+              <ion-card-content>
+                <h6 style="font-size: 10px;">9Mobile</h6>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <!--Check Balance and more-->
+      </ion-grid>
     </div>
-    <div class="ion-text-center">      
-      <ion-button color="primary" (click)="subscribeToService()" mode='ios'>
-        Continue
-      </ion-button>
-    </div>
-  </div>
 </ion-content>
